--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -10,6 +12,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="%PUBLIC_URL%/assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/assets/css/landing-page.css" rel="stylesheet"/>
+    <!--     Fonts and icons     -->
+    <link href="%PUBLIC_URL%/assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,22 +27,128 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BibleQuote. Quote the Bible with confidence.</title>
   </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <body class="landing-page landing-page2">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <nav class="navbar navbar-transparent navbar-top" role="navigation">
+      <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar bar1"></span>
+              <span class="icon-bar bar2"></span>
+              <span class="icon-bar bar3"></span>
+              </button>
+              <a href="http://www.creative-tim.com">
+                  <div class="logo-container">
+                      <div class="logo">
+                          <img src="assets/img/new_logo.png" alt="Creative Tim Logo">
+                      </div>
+                      <div class="brand">
+                          Creative Tim
+                      </div>
+                  </div>
+              </a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="example" >
+              <ul class="nav navbar-nav navbar-right">
+                  <li>
+                      <a href="#">
+                      <i class="fa fa-facebook-square"></i>
+                      Like
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                      <i class="fa fa-twitter"></i>
+                      Tweet
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                      <i class="fa fa-pinterest"></i>
+                      Pin
+                      </a>
+                  </li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+      </div>
+    </nav>
+    <div class="wrapper">
+      <div class="parallax filter-gradient blue" data-color="blue">
+          <div class= "container">
+              <div class="row">
+                  <div class="col-md-7  hidden-xs">
+                      <div class="parallax-image">
+                          <img src="assets/img/showcases/showcase-2/mac1.png"/>
+                      </div>
+                  </div>
+                  <div class="col-md-5">
+                      <div class="description text-center">
+                          <h2>Showcase 2 - Your webapp</h2>
+                          <br>
+                          <h5>This template was built closely to our current layout as of June 2016. You can download a free demo below. Please share the webpage with others. Hope this template makes a good preview of what we are building here!</h5>
+                          <div class="buttons">
+                              <a href="http://www.creative-tim.com/product/awesome-landing-page" class="btn btn-fill btn-neutral">
+                              <i class="fa fa-download"></i> Download
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div id="root"></div>
+      <footer class="footer">
+          <div class="container">
+              <nav class="pull-left">
+                  <ul>
+                      <li>
+                          <a href="#">
+                          Home
+                          </a>
+                      </li>
+                      <li>
+                          <a href="#">
+                          Company
+                          </a>
+                      </li>
+                      <li>
+                          <a href="#">
+                          Portfolio
+                          </a>
+                      </li>
+                      <li>
+                          <a href="#">
+                          Blog
+                          </a>
+                      </li>
+                  </ul>
+              </nav>
+              <div class="social-area pull-right">
+                  <a class="btn btn-social btn-facebook btn-simple">
+                  <i class="fa fa-facebook-square"></i>
+                  </a>
+                  <a class="btn btn-social btn-twitter btn-simple">
+                  <i class="fa fa-twitter"></i>
+                  </a>
+                  <a class="btn btn-social btn-pinterest btn-simple">
+                  <i class="fa fa-pinterest"></i>
+                  </a>
+              </div>
+              <div class="copyright">
+                  &copy; 2016 <a href="http://www.creative-tim.com">Creative Tim</a>, made with love
+              </div>
+          </div>
+      </footer>
+    </div>
   </body>
+  <script src="%PUBLIC_URL%/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+  <script src="%PUBLIC_URL%/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+  <script src="%PUBLIC_URL%/assets/js/bootstrap.js" type="text/javascript"></script>
+  <script src="%PUBLIC_URL%/assets/js/awesome-landing-page.js" type="text/javascript"></script>
 </html>
