--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <link href="%PUBLIC_URL%/assets/css/landing-page.css" rel="stylesheet"/>
     <!--     Fonts and icons     -->
     <link href="%PUBLIC_URL%/assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
